[gd_scene load_steps=2 format=3 uid="uid://dvin88jbub0g5"]

[ext_resource type="Script" uid="uid://cdjf8m7ut082n" path="res://scripts/garage.gd" id="1_jceud"]

[node name="Garage" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jceud")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Your Garage"
horizontal_alignment = 1

[node name="CarList" type="ItemList" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_text_lines = 10

[node name="Panel" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="InfoLabel" type="Label" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="item_selected" from="VBoxContainer/CarList" to="." method="_on_CarList_item_selected"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
